package edu.hitsz.prop;

/**
 * @author Black
 */
public class Bullet extends AbstractProp {

    public Bullet(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

}
